3.7/cloudhub/managing-schedules.adoc

= Managing Schedules

The CloudHub console includes a *Schedules* tab in the left navigation menu where you can view and control any polling elements within the flows of your deployed applications. CloudHub automatically detects the polling elements from within your flows and lists them on the Schedules tab. On this tab, you can select the polling elements and enable or disable them, change the polling frequency, or run them immediately – all during runtime, without making any changes in the underlying application.

== Use Cases

The Schedules tab is especially useful for the following use cases:

* You have a job that runs nightly but you want to trigger it right now so you can debug it. You want to do this in runtime so you don’t need to update the schedule in your underlying application.
* You want to change your schedules in your application at runtime without redeploying.
* You want to disable a scheduled job while one of the applications you are connecting to is undergoing maintenance.
* You want runtime visibility into the schedules in your application.  +

== Viewing Application Schedules in the Console

To use the scheduling feature in CloudHub, deploy an application that includes one or more polling elements. For example, the application illustrated below includes two simple flows, each with a polling scope.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:/docs/download/attachments/131039251/scheduling+cloudhub.png?version=1&modificationDate=1433818082562[image]
....
[tab,title="Studio XML Editor"]
....
[source]
----
<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
 
    <flow name="synchronize-accounts" doc:name="synchronize-accounts">
        <poll frequency="300000" doc:name="Poll">
            <logger level="INFO" doc:name="Start" message="Start Account Synchronization ${salesforce.username}"/>
        </poll>
        <logger level="INFO" doc:name="End" message="End Account Synchronization"/>
    </flow>
    <flow name="synchronize-contacts" doc:name="synchronize-contacts">
        <poll frequency="600000" doc:name="Poll">
            <logger level="INFO" doc:name="Start" message="Start Contact Synchronization ${salesforce.username}"/>
        </poll>
        <logger level="INFO" doc:name="End" message="End Contact Synchronization"/>
    </flow>
</mule>
----
....
------

Because CloudHub synchronizes your schedules automatically, overriding any synchronize property set on the flows containing the polling scopes, there is no need to do any other special configuration. 

Once it is deployed, select the application in your CloudHub console, and click *Schedules* in the left navigation menu. CloudHub lists the polling elements in your application in the order that they appear in your application: 

image:/docs/download/attachments/131039251/SchedulesView.png?version=2&modificationDate=1433970297271[image]

**Note**: The name of each element is determined by the **`doc:name` **attribute in the polling scopes, if you add one in the XML. If you do not specify a **`doc:name`**, then CloudHub applies the name, **yourFlowname Poll**.

The *Last Run* column shows the exact date and time when each polling element ran most recently. You can view the Logs to see further details about when the jobs started and ended their scheduled runs. 

== Managing Schedules at Runtime

To manage the polling elements:

1.  Check the boxes next to the individual elements that you want to manage.
2.  Click *Run now* if you want to override the schedule and run that job immediately.
3.  Click *Disable* to suspend a polling element. CloudHub does not run the polling job until you *Enable* it once again.
4.  In the **Schedule **column, CloudHub lists each polling element's polling frequency. +
..  Click the frequency of a polling element to open the schedule editor: +
 +
image:/docs/download/attachments/131039251/SchedulesChangeTime.png?version=1&modificationDate=1433970408156[image] +
 +

..  In the schedule editor, adjust the polling frequency of the element, or disable the polling frequency by unchecking **Enabled**:  +
 +
image:/docs/download/attachments/131039251/CHSetPollFreq.png?version=1&modificationDate=1433818082555[image] +
 +
..  Click *Switch to advanced mode* if you would like to use Cron expressions, and click *Quick reference* for information on required fields and allowed values.  Click *more* to view the Quartz http://quartz-scheduler.org/documentation/quartz-1.x/tutorials/crontrigger[CronTrigger Tutorial]. If you change the Cron setting, click **Update**. Or click *Cancel* to exit. Click *Switch to basic mode* to exit advanced mode. +
 +
image:/docs/download/attachments/131039251/CHAdvModeWithQkRef.png?version=1&modificationDate=1433818082503[image] +
 +
..  To see the schedule tab in action, select one or more of the scheduled jobs and click **Run Now**. "The schedules have been queued to run" message appears. +
  +
image:/docs/download/attachments/131039251/SchedulesRunNow.png?version=1&modificationDate=1433970858627[image] +
 
..  To check the result, click *Logs* in the left navigation menu, and view the entries to verify that the job you selected ran as expected: +
 +
image:/docs/download/attachments/131039251/SchedulesLogs.png?version=2&modificationDate=1433971417119[image]

**Notes**:

* While CloudHub supports polling frequencies in seconds, you may see discrepancies of a few seconds between individual polling calls. Setting a polling frequency higher than once in 10 seconds is not recommended.
* If a scheduled job is missed (not triggered) one or more times because the application is down, CloudHub triggers the job once as soon as the application restarts.

== See Also

* Learn more about configuring link:/docs/display/current/Poll+Schedulers[poll schedules] in Mule.

 
